# cargo-web-component

./: .gitmodules  Cargo.toml  README.md
dependencies/: index.html
src/: main.rs
