[package]
name          = "cargo-web-component"
version       = "0.1.3"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
license       = "Apache-2.0"
description   = "Cargo commands for ease web-component-rs development."
readme        = "README.md"
repository    = "https://github.com/notdanilo/cargo-web-component"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
actix-web = "3.1.0"
actix-files = "0.4.0"